# stealth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  bitcoin.conf  bitcoin.conf.example  rustfmt.toml
SIPs/: SIP-001.md
api/: Cargo.toml  README.md
api/src/: error.rs  lib.rs  main.rs  preflight.rs
api/src/routes/: wallet.rs
api/tests/: e2e_regtest_scan.rs  http_scan.rs
backend/script/: bitcoin_rpc.py  config.ini
bitcoincore/: Cargo.toml  README.md
bitcoincore/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/stealth-app/: Cargo.toml
crates/stealth-app/src/: lib.rs  main.rs
crates/stealth-bitcoincore/: Cargo.toml
crates/stealth-bitcoincore/src/: lib.rs
crates/stealth-core/: Cargo.toml
crates/stealth-core/src/: config.rs  descriptor.rs  detectors.rs  engine.rs  error.rs  gateway.rs  graph.rs  lib.rs  model.rs
crates/stealth-core/tests/: detectors.rs  engine.rs
engine/: Cargo.toml  README.md
engine/src/: detect.rs  engine.rs  graph.rs  lib.rs
engine/tests/: integration.rs
frontend/src/screens/: LoadingScreen.jsx
model/: Cargo.toml
model/src/: config.rs  descriptor.rs  error.rs  gateway.rs  lib.rs  scan.rs  types.rs
scripts/: setup.sh
