[workspace]
members = [
    "model",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Breno Brito (brenorb)", 
    "Herberson Miranda (hsmiranda)",
    "LORDBABUINO <lordbabuino@protonmail.com>", 
    "Renato Britto (satsfy) <0xsatsfy@gmail.com>", 
]
license = "MIT"
repository = "https://github.com/stealth-bitcoin/stealth"
rust-version = "1.93.1"


[workspace.dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = ["serde", "base64", "secp-recovery"] }
corepc-node = { version = "0.10.1", features = ["29_0"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
stealth-engine = { path = "engine" }
stealth-model = { path = "model" }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
