[package]
name = "stealth-bitcoincore"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bitcoin Core RPC gateway for stealth-engine"

[dependencies]
bitcoin = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ini = { package = "rust-ini", version = "0.21" }
serde = { workspace = true }
serde_json = { workspace = true }
stealth-model = { workspace = true }
thiserror = { workspace = true }
urlencoding = "2.1"
