[package]
name = "stealth-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Detects and reproduces Bitcoin UTXO privacy vulnerabilities"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "privacy", "utxo", "chain-analysis"]
readme = "README.md"

[dependencies]
bitcoin = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
stealth-model = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
corepc-node = { workspace = true }
stealth-bitcoincore = { path = "../bitcoincore" }

[lints.rust]
missing_debug_implementations = "deny"
