[package]
name = "stealth-bitcoincore"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ini = { package = "rust-ini", version = "0.21" }
serde.workspace = true
serde_json.workspace = true
stealth-core = { path = "../stealth-core" }
thiserror.workspace = true
urlencoding = "2.1"
